# sales-forecast

./: .env-example  .gitignore  README.md  compose.yml  pyproject.toml
app/analysis/: analyse_sales_data.py  analyze_sales_weather.py  correlation_weather_sales.py  predict_sales.py
app/ingest_sales_data/: coordinates.py  ingest_data  ingest_data.py
app/sales/: analyse_sales_data.py  coordinates.py  fake_sales_data.py  generate_fake_sales.py  ingest_data.py  load_sales_data.py  process_sales_data.py
app/utility/: supabase_functions.py
app/weather/: clean_weather_data.py  coordinates.py  fetch_weather.py  test.py  upload_weather.py  upload_weather_features.py  weather_features.py
dashboard/: dockerfile  package-lock.json  package.json
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: Historic_sales_and_weather.md  Products.md  Revenue.md  index.md  sales_and_weather.md  sales_prediction.md  top_5_per_month.md  weather_and_sales_forecast.md
dashboard/sources/supabase/: analytics_least5_popular.sql  analytics_revenue_by_store.sql  analytics_revenue_per_month.sql  analytics_top5_products.sql  analytics_top5_products_month.sql  analytics_top_day_per_month.sql  connection.yaml  daily_salesdata.sql  sales_forecast.sql  sales_prediction.sql  sales_weather_joined.sql  test.sql  (+3 more)
data/cleaned/: weather_clean.csv  weather_features.csv
data/raw/: fake_sales_march_april.csv  weather_raw.csv
data/rejected/: coffee-shop-sales-revenue.csv  weather_rejected.csv
evidence/: package-lock.json
kafka/sales-forecast/: requirements.txt
(+13 files in other folders)
